[관리자페이지] 멤버관리 세팅
멤버에 필요한 세팅 확인
controller , service, DAO,sql 잘연결되는지

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,6 +23,7 @@
  		<param-value>
  			/WEB-INF/controller/psyco-servlet.xml
  			/WEB-INF/controller/main-controller.xml
+ 			/WEB-INF/controller/super-controller.xml
  		</param-value>
  	</init-param>
  </servlet>
