레이아웃 tiles 세팅 , main, userMypage 적용

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -33,4 +33,13 @@
  		<servlet-name>psyco</servlet-name>
  		<url-pattern>*.com</url-pattern>
  	</servlet-mapping>
+ 	
+ 	  <jsp-config>
+        <jsp-property-group>
+            <url-pattern>*.jsp</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <trim-directive-whitespaces>true</trim-directive-whitespaces>
+        </jsp-property-group>
+    </jsp-config>    
+ 	
 </web-app>
